# Evitrial

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/annotations/: LABEL_MAPPING.md
src/: __init__.py  checkIngest.py  config.py  demo.py  eval.py  indexQdrant.py  ingest.py  match.py  parse.py  pipeline.py  rank.py  retrieval.py  schemas.py  trace.py  trainLora.py  verify.py
tests/: testContracts.py
