[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eviTrial"
version = "0.1.0"
description = "Evidence-verified clinical-trial matching (faithfulness + abstention)."
requires-python = ">=3.10"
# Runtime deps live in requirements.txt (single source of truth, per CLAUDE.md).
# This file carries only build/packaging metadata so versions aren't pinned twice.
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["src*"]
